--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.11",
+    "element-ui": "^2.15.9",
+    "express": "^4.18.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
@@ -34,11 +37,20 @@
     "eslint-plugin-vue": "^8.0.3",
     "husky": "^7.0.1",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "svg-sprite-loader": "^6.0.11",
+    "unplugin-auto-import": "^0.10.2",
+    "unplugin-vue-components": "^0.21.2"
   },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-customizable"
     }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
