--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "element-plus": "^2.2.11",
+    "element-plus": "^1.3.0-beta.5",
     "element-ui": "^2.15.9",
     "express": "^4.18.1",
     "vue": "^3.2.13",
