--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.6",
     "axios": "^0.27.2",
+    "circular-dependency-plugin": "^5.2.2",
     "core-js": "^3.8.3",
     "element-plus": "^1.3.0-beta.5",
     "element-ui": "^2.15.9",
@@ -52,5 +54,8 @@
       "eslint --fix",
       "git add"
     ]
+  },
+  "rules": {
+    "vue/multi-word-component-names": "off"
   }
 }
