--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "axios": "^0.27.2",
     "circular-dependency-plugin": "^5.2.2",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.4",
+    "driver.js": "^0.9.8",
     "element-plus": "^1.3.0-beta.5",
     "element-ui": "^2.15.9",
     "express": "^4.18.1",
+    "screenfull": "^5.1.0",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.2.0",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
